--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,30 @@
 body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #EEE;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+#root{
+  margin: 20px;
+  background-color: #FFF;
+  border-radius: 6px;
+  width: 325px;
+  min-height: 500px;
+  padding: 20px;
+  box-shadow: 2.0px 4.0px 4.0px hsl(0deg 0% 0% / 0.38);
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
