--- a/src/components/palpite/palpite.css
+++ b/src/components/palpite/palpite.css
@@ -20,5 +20,9 @@
     border: 1px solid #EEE;
     font-size: 20px;
     font-weight: 600;
+}
 
+.btnPalpitar:hover{
+    background-color: #40a940;
+    transition: 0.6s;
 }
