--- a/src/components/resultado/resultado.css
+++ b/src/components/resultado/resultado.css
@@ -1,9 +1,9 @@
 .resultado{
-    line-height: 1.8;
     border-radius: 5px;
     border: 1px solid;
     text-align: center;
     margin-bottom: 10px;
+    padding: 6px;
 }
 
 .acertou{
